# micpipe

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  com.markarranz.minimix.plist
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: audio.rs  cli.rs  default_input_watcher.rs  error.rs  lib.rs  logging.rs  main.rs  output_usage_watcher.rs  plist.template  resampler.rs  router.rs  service.rs
