[package]
name = "micpipe"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Run a macOS microphone-to-BlackHole audio router as a background service."
repository = "https://github.com/markarranz/micpipe"
readme = "README.md"
license = "MIT"
keywords = ["audio", "audio-router", "microphone", "blackhole", "macos"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
cpal = "0.18"
ringbuf = "0.5"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
