[package]
name = "micpipe"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Run a macOS microphone-to-BlackHole audio router as a background service."
repository = "https://github.com/markarranz/micpipe"
readme = "README.md"
license = "MIT"
keywords = ["audio", "audio-router", "microphone", "blackhole", "macos"]
categories = ["command-line-utilities", "multimedia::audio"]

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# These dependency versions are currently selected transitively by CPAL/CoreAudio crates.
multiple_crate_versions = { level = "allow", priority = 1 }
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[dependencies]
anyhow = "1"
cpal = "0.18"
ringbuf = "0.5"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-audio = { version = "0.3", default-features = false, features = ["AudioHardware"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFString"] }
